# tooling

./: .gitignore  CMakeLists.txt  R-libraries.txt  get-nix.sh  packages.R
analysis/: CMakeLists.txt  fat-tail-example-CMakeLists.txt
analysis/fat-tail-example/: CMakeLists.txt  run_metadata.R
analysis/one-level/: CMakeLists.txt
analysis/one-level/set-1/: plan.txt
analysis/set-1/: run_metadata.R
code/: CMakeLists.txt
code/simachine/: CMakeLists.txt
code/stan-dev/: CMakeLists.txt
code/stannis/: CMakeLists.txt
code/waitup/: .Renviron  CMakeLists.txt
code/waitup/waitup/: DESCRIPTION  NAMESPACE
code/waitup/waitup/R/: api-check.R  api.R  (+10 more)
models/: CMakeLists.txt
models/stan-lang/: CMakeLists.txt
models/stan-lang/bodies/: gamma-exp-sum-gamma-mix-p1.stan.part  gamma-exp-sum-gamma-mix-p2.stan.part  gamma-exp-sum-p1.stan.part  gamma-p1.stan.part  gamma-p2.stan.part  generalized-gamma-p1.stan.part  generalized-gamma-p2.stan.part  weibull-p1.stan.part  weibull-uniform-mixture-p1.stan.part
models/stan-lang/data/: truncated-delay.stan.part
models/stan-lang/full/: CMakeLists.txt  exponentiated-weibull-p1.stan  half-generalized-gamma-p2.stan  half-generalized-gamma.stan  weibull-k-mixture-p1.stan
models/stan-lang/full-fix/: CMakeLists.txt  generalized-gamma-p3.stan  head.stan.part
models/stan-lang/functions/: CMakeLists.txt  gamma-exp-sum-gamma-mix.stan.part  gamma-exp-sum.stan.part  gamma.stan.part  generalized-gamma.stan.part  merge-stan-functions.sh  weibull-uniform-mixture.stan.part  weibull.stan.part
scripts/: packages.R  process-output.sh  submit.R
(+58 files in other folders)
